boulder/boulder/tests/compile_fail/hir/overflowing_lit.bo
# Literal out of range
# `u8`
# 256
# (6:
fn a(a: u8) -> u8 {
    a + 256
}